--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/float-label.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Vue 3 Float Labels</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/develop.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
